--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     display: flex;
     gap: 15px;
     width: 14px;
-    padding-top: 14px;
+    padding-top: 5px;
     font-weight: bold;
   
 }
@@ -47,6 +47,7 @@ h2{
     position: relative;
 }
 .link-container{
+  padding: 10px;
     display: flex;
     gap: 10px; 
     flex-wrap: wrap;
@@ -63,9 +64,9 @@ bottom: 0;
     text-decoration: none;
   }
   .right{
- position: relative;
- top: 15px;
-  }
+    position: relative;
+    top: 15px;
+     }
   svg{
 width: 30px
   }
@@ -75,7 +76,97 @@ width: 30px
   }
   
   .header>*{
-    padding: 20px;
-    background-color: rgb(19,19,19);
+    padding: 15px;
+    background-color: rgba(128, 128, 128, 0.075);
   }
+  .spotify-playlist{
+    padding: 20px;
+    
+  }
+  .cardcontainer{
+    margin: 10px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    max-height: 80vh;
+  }
+   .first{
+    padding:5px;
+    width: 15vw;
+    border-radius: 100%;
+  }
+  .second{
+    padding:0px;
+    width: 13vw;
+    border-radius: 100%;
+  }
+  .third{
+    padding:5px;
+    width: 15vw;
+    border-radius: 100%;
+  }
+  .fourth{
+    padding:5px;
+    width: 15vw;
+    border-radius: 100%;
+  }
+  .card{
+    position: relative;
+  }
+  .play{
+      background-color: green;
+      color: black;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position:absolute;
+      top: 250px;
+      left: 170px;
+      opacity: 1;
+      transition: all 1s ease-in-out;
+      
+  }
+  .button>*{
+    margin:0px 12px;
+  }
+  .signup-btn{
+background-color: rgb(34, 34,34);
+color:rgb(182, 179, 179);
+border: none;
+outline: none;
+font-weight: bold;
+cursor: pointer;
+font-size: 16px;
+
+  }
+  .signup-btn:hover{
+    text-decoration: underline;
+    font-size: 17px;
+    color: white
+  
+  }
+  .log-btn{
+    background-color: white;
+    color: black;
+    border-radius: 21px;
+    font-weight: bold;
+    padding: 10px;
+    width: 6vw;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  .log-btn:hover{
+    font-weight: bold;
+    font-size: 17px;
+  }
+  
+  
+ 
+  
+  
+
 
