--- a/utility.css
+++ b/utility.css
@@ -27,3 +27,33 @@
 .m-1{
 margin: 5px;
 }
+.spotify-playlist{
+    padding: 6px;
+}
+
+
+/* For modern browsers */
+::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #2e2e2e; /* Dark background for the track */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #555; /* Darker scrollbar thumb */
+    border-radius: 10px; /* Rounded edges */
+    border: 2px solid #2e2e2e; /* Space between thumb and track */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #777; /* Lighter on hover */
+  }
+  
+  /* For Firefox */
+  * {
+    scrollbar-width: thin; /* Makes scrollbar thinner */
+    scrollbar-color: #555 #2e2e2e; /* Thumb color and track color */
+  }
+  
